src/containers/app/base.css
html {
    height: 100%;

}

body {
    padding-bottom: 72px;
}

.myFooter {
    position: absolute;
    bottom: 0;
    width: 100%;
    height: 72px;
    background: whitesmoke;
}

.footerText {
    font-size: medium;
    font-weight: bolder;
    color: grey;
}

.myHeader {
    width: 100%;
    height: 100%;
    background: white;
    padding: 0;
    border-bottom: 1px solid #e8e8e8;
}

.navMenu {
    border-bottom: none;
}

.menuItem {
    float: right;
    margin-top: 0 !important;
}

.logo {
    color: aqua;
    font-weight: bolder;
    font-size: 20px;
    padding-left: 30px;
    float: left;
    line-height: 40px;
    margin-top: 5px;
    cursor: pointer;
}

.narrowLogo {
    width: 100%;
    padding: 0;
    text-align: center;
}

.logoIcon {
    margin-right: 5px;
}

.content {
    background: white;
}

.inputBox, .notFoundBox {
    position: absolute;
    top: 45%;
    transform: translateY(-50%);
    text-align: center;
    width: 50%;
    margin: auto;
    left: 0;
    right: 0;
}

.generateInputBoxIcon {
    animation: inputBoxRotate 4s linear infinite;
    color: lightblue;
}

@keyframes inputBoxRotate {
    0% {
        transform: rotate(0);
    }
    50% {
        transform: rotate(180deg);
    }
    100% {
        transform: rotate(360deg);
    }
}

.restoreInputBoxIcon {
    animation: inputBoxReverseRotate 4s linear infinite;
    color: lightgreen;
}

@keyframes inputBoxReverseRotate {
    0% {
        transform: rotate(0);
    }
    50% {
        transform: rotate(-180deg);
    }
    100% {
        transform: rotate(-360deg);
    }
}

.customIcon:hover {
    color: #66ccff;
    cursor: pointer;
}

.notFoundPrompt {
    line-height: 30px;
    font-size: large;
    font-weight: bold;
    margin-top: 10px;
    color: grey;
}

.apiDocInputBoxIcon {
    display: none;
}

